--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="secondname">second name</string>
     <string name="dob">date of birth</string>
     <string name="normal_auth">Create Account</string>
+    <string name="login_facebook">Login With Facebook</string>
+
+    <string name="facebook_app_id">939384546832732</string>
+    <string name="fb_login_protocol_scheme">fb939384546832732</string>
 </resources>
